account setting UI draft

--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.454.0",
     "openapi-fetch": "^0.13.4",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
