--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
     "recoil": "^0.7.7",
