--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dayjs": "^1.11.13",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.454.0",
+    "nuqs": "^2.4.1",
     "openapi-fetch": "^0.13.4",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
