--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.7",
     "change-case": "^5.4.4",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -42,6 +43,7 @@
     "nuqs": "^2.4.1",
     "openapi-fetch": "^0.13.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
